# purpura

./: Cargo.toml  README.md
examples/: divide.purr  fib.purr  negate.purr  patterns.purr  pred.purr  weekday.purr  wrong.purr
purpura/checker/: Cargo.toml
purpura/checker/src/: debug.rs  display.rs  env.rs  lib.rs  resolution.rs  types.rs  unify.rs
purpura/checker/src/check/: expr.rs  mod.rs
purpura/checker/src/elaborated/: case.rs  exhaustive.rs  mod.rs
purpura/checker/src/infer/: errors.rs  expr.rs  mod.rs  pat.rs  top_level.rs  typ.rs
purpura/cli/: Cargo.toml
purpura/cli/src/: main.rs
purpura/desugar/: Cargo.toml
purpura/desugar/src/: debug.rs  expr.rs  from.rs  lib.rs
purpura/lexer/: Cargo.toml
purpura/lexer/src/: lib.rs  token.rs
purpura/location/: Cargo.toml
purpura/location/src/: lib.rs
purpura/parser/: Cargo.toml
purpura/parser/src/: expr.rs  lib.rs  program.rs  spanned.rs
purpura/report/: Cargo.toml
purpura/report/src/: lib.rs
src/: checker.rs  desugar.rs  expr.rs  files.rs  lexer.rs  lib.rs  location.rs  main.rs  parser.rs  report.rs  symbol.rs  token.rs  tree.rs
src/checker/: exhaustive.rs
