[workspace]
resolver = "2"
members = [
    "purpura/lexer",
    "purpura/parser",
    "purpura/location",
    "purpura/report",
    "purpura/checker",
    "purpura/desugar",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
im-rc = "15.1.0"
