[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
parser = { path = "../parser" }
checker = { path = "../checker" }
desugar = { path = "../desugar" }
report = { path = "../report" }
